--- a/src/sass/base/_resets.scss
+++ b/src/sass/base/_resets.scss
@@ -2,52 +2,53 @@
 @use "../abstracts/fonts" as *;
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  -webkit-tap-highlight-color: transparent;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: $font-family-base;
-    color: $color-text-main;
-    background-color: $color-bg-start;
+  margin: 0;
+  padding: 0;
+  font-family: $font-family-base;
+  color: $color-text-main;
+  background-color: $color-bg-start;
 }
 
 .main {
-    padding-bottom: 5rem;
+  padding-bottom: 5rem;
 }
 
 h1,
 h2,
 h3,
 h4 {
-    font-family: $font-family-base;
-    margin: 0;
+  font-family: $font-family-base;
+  margin: 0;
 }
 
 button {
-    border: none;
-    background: none;
-    cursor: pointer;
-    padding: 0;
-    font-family: inherit;
+  border: none;
+  background: none;
+  cursor: none;
+  padding: 0;
+  font-family: inherit;
 }
 
 input,
 textarea {
-    outline: none;
-    font-family: inherit;
+  outline: none;
+  font-family: inherit;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .Toastify {
-    font-size: $font-size-2xl !important;
+  font-size: $font-size-2xl !important;
 }
