--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -12,6 +12,7 @@
         justify-content: space-between;
         align-items: center;
         padding: 1rem;
+        padding-top: calc(1rem + env(safe-area-inset-top));
     }
 
     &__brand {
